--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-<div>let's start aws</div>
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <div class="container">
+    <div class="collapse navbar-collapse justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show" routerLinkActive="active">
+          <a class="nav-link" routerLink="/" style="color: brown;">
+            <i ></i> test</a>
+        </li>
+        <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show" routerLinkActive="active">
+          <a class="nav-link" routerLink="/" style="color: green;">
+            <i></i> test</a>
+        </li>
+        <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show" routerLinkActive="active">
+          <a class="nav-link" routerLink="/" style="color: black;">
+            <i ></i> test</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
