--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,27 +1,29 @@
 <nav class="navbar navbar-expand-lg">
-  <a class="navbar-brand" href="#">Alex</a>
+  <div class="myIconCircle">
+    <a class="navbar-brand" routerLink="/">A</a>
+  </div>
   <button
-    class="navbar-toggler"
+    class="navbar-toggler iconBorder"
     type="button"
     data-toggle="collapse"
-    data-target="#navbarNavAltMarkup"
-    aria-controls="navbarNavAltMarkup"
+    data-target="#navbarMobile"
+    aria-controls="navbarMobile"
     aria-expanded="false"
     aria-label="Toggle navigation"
   >
-    <span class="navbar-toggler-icon"></span>
+    <span class="fas fa-bars iconColor"></span>
   </button>
   <div
-    class="collapse navbar-collapse justify-content-center pr-5"
-    id="navbarNavAltMarkup"
+    class="collapse navbar-collapse justify-content-end pr-5"
+    id="navbarMobile"
   >
     <div class="navbar-nav">
-      <a class="nav-item nav-link pl-3 active" href="#"
+      <a class="nav-item nav-link active" href="#"
         >Home <span class="sr-only">(current)</span></a
       >
-      <a class="nav-item nav-link pl-4" href="#">Portfolio</a>
-      <a class="nav-item nav-link pl-4" href="#">About Me</a>
-      <a class="nav-item nav-link pl-4" href="#">Contact</a>
+      <a class="nav-item nav-link" href="#">Portfolio</a>
+      <a class="nav-item nav-link" href="#">About Me</a>
+      <a class="nav-item nav-link" href="#">Contact</a>
     </div>
   </div>
 </nav>
