--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg">
-  <div class="myIconCircle">
-    <a class="navbar-brand" routerLink="/">A</a>
+  <div class="myIconCircle row justify-content-center">
+    <a class="navbar-brand" routerLink="/"></a>
   </div>
   <button
     class="navbar-toggler iconBorder"
