Change design add sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<header>
-  <app-header></app-header>
-</header>
-<div class="container">
-
-</div>
-<footer>
-  <app-footer></app-footer>
-</footer>
+<app-side-navbar></app-side-navbar>
