--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,3 @@
-<div class="backgroundColorHeader">
-  <div class="navbar-fixed-top">
-    <app-navbar></app-navbar>
-    </div>
+<div>
+  test
 </div>
