--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-side-navbar></app-side-navbar>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-3 p-0">
+      <app-side-navbar></app-side-navbar>
+    </div>
+    <div class="col">
+      <app-header></app-header>
+    </div>
+  </div>
+</div>
