--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<div class="container-fluid">
+<div class="container-fluid p-0">
   <div class="row">
-    <div class="col-lg-3 p-0">
-      <app-side-navbar></app-side-navbar>
+    <div class="col-md-auto">
+      <div class="sideBarSize">
+        <app-side-navbar></app-side-navbar>
+      </div>
     </div>
-    <div class="col">
+    <div class="col-12 col-md">
       <app-header></app-header>
     </div>
   </div>
