--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="nav-side-menu m-0">
+<div class="nav-side-menu">
   <div class="brand">Alex Moshinsky</div>
   <i
     class="fa fa-bars fa-2x toggle-btn"
