Add home page, content, about

--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -8,12 +8,12 @@
   <div class="menu-list">
     <ul id="menu-content" class="menu-content collapse out">
       <li>
-        <a routerLink="#"
+        <a routerLink="home"
           ><i class="fa fa-home"></i> Home <span class=""></span
         ></a>
       </li>
       <li>
-        <a routerLink="#"
+        <a routerLink="about"
           ><i class="fa fa-id-card"></i> about <span class=""></span
         ></a>
       </li>
@@ -25,9 +25,7 @@
       </li>
       <ul class="sub-menu collapse" id="port">
         <li>
-          <a routerLink="#"
-            ><span class="fas fa-globe"></span> Real world works
-          </a>
+          <a routerLink="#"><span class="fas fa-globe"></span> Works </a>
         </li>
         <li>
           <a routerLink="#"
@@ -46,12 +44,12 @@
           ><i class="fa fa-university"></i> Education <span class=""></span
         ></a>
       </li>
-
       <li>
         <a routerLink="#"
           ><i class="fa fa-scroll"></i> Publications <span class=""></span
         ></a>
       </li>
     </ul>
+    <ul></ul>
   </div>
 </div>
