--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid p-0">
+<div class="container-fluid ">
   <div class="row">
-    <div class="col-md-auto">
+    <div class="col-md-auto p-0">
       <div class="sideBarSize">
         <app-side-navbar></app-side-navbar>
       </div>
     </div>
     <div class="col-12 col-md">
-      <app-header></app-header>
+      <app-content></app-content>
     </div>
   </div>
 </div>
