--- a/src/app/content/home-page/home-page.component.html
+++ b/src/app/content/home-page/home-page.component.html
@@ -1,3 +1,8 @@
 <div class="center">
-  <h1>Welcome</h1>
+  <h1>
+    "Creativity Is Intelligence Having Fun"
+    <div>
+      <span class="albertEinsteinText"><small>Albert Einstein</small></span>
+    </div>
+  </h1>
 </div>
