Add skills-page, and about text
About need to fix

--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -1,11 +1,23 @@
-<div class="container">
+<div class="container chnageFont">
   <div class="row text-center">
-    <div class="col-12">
-      <app-header [title]="'test'"></app-header>
+    <div class="col-12 mt-5">
+      <app-header [title]="'About'"></app-header>
     </div>
   </div>
   <div class="row">
-    <p>about-me works!</p>
+    <div class="col-12"><i style="color: red;">My name is Alex and i'm full stack developer.</i></div>
+    <div class="col-12">
+     <i style="color: red;">little about me from very young age i love technology and passion about
+      that.</i>
+    </div>
+    <div class="col-12">
+      Mission-driven full stack developer with a passion for thoughtful <i style="color: red;">build useful softwares</i>, collaboration, and teaching. I’ve always sought out opportunities
+      and challenges that are meaningful to me.
+    </div>
+    <div class="col-12">
+      I've never stopped engaging my passion to help others and solve problems.
+      As a full stack developer, I enjoy using my obsessive attention to detail,
+      my unequivocal love for making things
+    </div>
   </div>
-
 </div>
