--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -1,23 +1,36 @@
-<div class="container chnageFont">
+<div class="container changeFont" style="border-style: ridge;">
   <div class="row text-center">
-    <div class="col-12 mt-5">
+    <div class="col-12 mt-1">
       <app-header [title]="'About'"></app-header>
     </div>
   </div>
-  <div class="row">
-    <div class="col-12"><i style="color: red;">My name is Alex and i'm full stack developer.</i></div>
-    <div class="col-12">
-     <i style="color: red;">little about me from very young age i love technology and passion about
-      that.</i>
+  <div class="row font-weight-bold" style="font-size: x-large;">
+    <div class="col-12 ">
+      <i>My name is Alex and i'm a full stack developer.</i>
     </div>
     <div class="col-12">
-      Mission-driven full stack developer with a passion for thoughtful <i style="color: red;">build useful softwares</i>, collaboration, and teaching. I’ve always sought out opportunities
-      and challenges that are meaningful to me.
+      <i>A little about myself:</i>
     </div>
     <div class="col-12">
-      I've never stopped engaging my passion to help others and solve problems.
-      As a full stack developer, I enjoy using my obsessive attention to detail,
-      my unequivocal love for making things
+      <i> technology and was very passion about it.</i>
+    </div>
+    <div class="col-12">
+      <i>
+        I’m a mission-driven full stack developer with a passion for thoughtful
+        software design, collaboration, and teaching.</i
+      >
+    </div>
+    <div class="col-12">
+      <i>
+        I’m constantly looking for opportunities and challenges that are
+        meaningful to me.
+      </i>
+    </div>
+    <div class="col-12">
+      <i>
+        I've never stopped engaging my passion to help others and solve
+        problems.
+      </i>
     </div>
   </div>
 </div>
