--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -1,5 +1,5 @@
 <div class="nav-side-menu">
-  <div class="brand chnageFont">
+  <div class="brand changeFont">
     <div *ngIf="!this.isMobile; else notMobile">
       <div class="alex">Alex</div>
       <div class="alexMoshinsky">Moshinsky</div>
