--- a/src/app/content/about-me/about-me.component.css
+++ b/src/app/content/about-me/about-me.component.css
@@ -1,3 +1,3 @@
-.chnageFont {
-  font-family: "Tienne-Regular", "arial", sans-serif;
+.changeFont {
+  font-family: "OpenSans-Regular", "arial", sans-serif;
 }
