--- a/src/app/content/skills-page/skills-page.component.html
+++ b/src/app/content/skills-page/skills-page.component.html
@@ -1,1 +1,7 @@
-<p>skills-page works!</p>
+<div class="container chnageFont" style="border-style: ridge;">
+  <div class="row text-center">
+    <div class="col-12 mt-1">
+      <app-header [title]="'Skills'"></app-header>
+    </div>
+  </div>
+</div>
