--- a/src/app/shared/side-navbar/side-navbar.component.css
+++ b/src/app/shared/side-navbar/side-navbar.component.css
@@ -9,6 +9,7 @@
   width: 300px;
   height: 100%;
   color: #e1ffff;
+  border: solid black 1px;
 }
 .nav-side-menu .brand {
   background-color: #2574af;
@@ -330,8 +331,8 @@ body {
   outline: 0;
 }
 
-.chnageFont {
-  font-family: "Tienne-Regular", "arial", sans-serif;
+.changeFont {
+  font-family: "OpenSans-Regular", "arial", sans-serif;
 }
 
 .swordIcon {
