--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -23,14 +23,17 @@
         <a><i class="fa fa-id-card"></i> About <span class=""></span></a>
       </li>
       <li routerLink="skills" class="disableBorderWhenActive pl-2">
-        <a><i class="swordIcon"></i> Skills<span class=""></span></a>
+        <a
+          ><img
+            src="../../../assets/icons/sword.svg"
+            style="width: 2.3em" class="pr-2" />Skills<span class=""></span
+        ></a>
       </li>
       <li
         data-toggle="collapse"
         data-target="#port"
         class="collapsed disableBorderWhenActive"
         routerLink="#"
-
       >
         <a
           ><i class="fab fa-uncharted"></i> Portfolio
