Fig again SVG skill icon

--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -17,17 +17,16 @@
   <div class="menu-list">
     <ul id="menu-content" class="menu-content collapse out">
       <li routerLink="home" class="disableBorderWhenActive">
-        <a><i class="fa fa-home"></i> Home <span class=""></span></a>
+        <a><i class="fa fa-home"></i> Home</a>
       </li>
       <li routerLink="about" class="disableBorderWhenActive">
-        <a><i class="fa fa-id-card"></i> About <span class=""></span></a>
+        <a><i class="fa fa-id-card"></i> About</a>
       </li>
       <li routerLink="skills" class="disableBorderWhenActive pl-2">
         <a
           ><img
             src="../../../assets/icons/sword.svg"
-            style="width: 2.3em" class="pr-2" />Skills<span class=""></span
-        ></a>
+            style="width: 2.2em" class="pr-2" />Skills</a>
       </li>
       <li
         data-toggle="collapse"
@@ -53,18 +52,15 @@
 
       <li>
         <a routerLink="#"
-          ><i class="fa fa-clipboard-list"></i> Resume <span class=""></span
-        ></a>
+          ><i class="fa fa-clipboard-list"></i> Resume</a>
       </li>
       <li>
         <a routerLink="#"
-          ><i class="fa fa-university"></i> Education <span class=""></span
-        ></a>
+          ><i class="fa fa-university"></i> Education </a>
       </li>
       <li>
         <a routerLink="#"
-          ><i class="fa fa-scroll"></i> Publications <span class=""></span
-        ></a>
+          ><i class="fa fa-scroll"></i> Publications</a>
       </li>
     </ul>
     <ul></ul>
