--- a/src/app/content/skills-page/skills-page.component.css
+++ b/src/app/content/skills-page/skills-page.component.css
@@ -1,3 +1,8 @@
 .chnageFont {
   font-family: "Tienne-Regular", "arial", sans-serif;
 }
+
+.iconAngular {
+  color: whitesmoke;
+  background-color: red;
+}
