--- a/src/app/content/skills-page/skills-page.component.html
+++ b/src/app/content/skills-page/skills-page.component.html
@@ -5,3 +5,9 @@
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="col-12">
+    <div><i class="fab fa-angular iconAngular fa-4x"></i></div>
+    <div><i class="fab fa-node fa-4x" style="color: green;"></i></div>
+  </div>
+</div>
