--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,8 @@
 
 body {
   background:
-    radial-gradient(black 3px, transparent 4px),
-    radial-gradient(black 3px, transparent 4px),
+    radial-gradient(rgb(243, 241, 241) 3px, transparent 4px),
+    radial-gradient(rgb(243, 241, 241) 3px, transparent 4px),
     linear-gradient(#fff 4px, transparent 0),
     linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
     linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
