Skill icon path fix

--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -25,7 +25,7 @@
       <li routerLink="skills" class="disableBorderWhenActive pl-2">
         <a
           ><img
-            src="../../../assets/icons/sword.svg"
+            src="assets/icons/sword.svg"
             style="width: 2.2em" class="pr-2" />Skills</a>
       </li>
       <li
