Add SVG component

--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -22,11 +22,8 @@
       <li routerLink="about" class="disableBorderWhenActive">
         <a><i class="fa fa-id-card"></i> About</a>
       </li>
-      <li routerLink="skills" class="disableBorderWhenActive pl-2">
-        <a
-          ><img
-            src="assets/icons/sword.svg"
-            style="width: 2.2em" class="pr-2" />Skills</a>
+      <li routerLink="skills" class="disableBorderWhenActive">
+        <a><i style="padding-right: 2.5%; "><app-svg-sword></app-svg-sword></i>Skills</a>
       </li>
       <li
         data-toggle="collapse"
@@ -51,16 +48,13 @@
       </ul>
 
       <li>
-        <a routerLink="#"
-          ><i class="fa fa-clipboard-list"></i> Resume</a>
+        <a routerLink="#"><i class="fa fa-clipboard-list"></i> Resume</a>
       </li>
       <li>
-        <a routerLink="#"
-          ><i class="fa fa-university"></i> Education </a>
+        <a routerLink="#"><i class="fa fa-university"></i> Education </a>
       </li>
       <li>
-        <a routerLink="#"
-          ><i class="fa fa-scroll"></i> Publications</a>
+        <a routerLink="#"><i class="fa fa-scroll"></i> Publications</a>
       </li>
     </ul>
     <ul></ul>
