Add SVG to skill page

--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="container changeFont" style="border-style: ridge;">
+<div class="container changeFont aboutMeBackground">
   <div class="row text-center">
     <div class="col-12 mt-1">
       <app-header [title]="'About'"></app-header>
@@ -31,6 +31,9 @@
         I've never stopped engaging my passion to help others and solve
         problems.
       </i>
+      <div class="col-12">
+        <i style="font-size: xx-large; color: red;">WIP</i>
+      </div>
     </div>
   </div>
 </div>
