--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,6 @@
 <div class="container"></div>
 <div class="row mt-1">
-  <div class="col-12 mt-5" style="background-color: white;">
+  <div class="col-12 mt-5">
     <router-outlet></router-outlet>
   </div>
 </div>
