--- a/src/app/content/skills-page/skills-page.component.html
+++ b/src/app/content/skills-page/skills-page.component.html
@@ -1,13 +1,32 @@
-<div class="container chnageFont" style="border-style: ridge;">
+<div class="container chnageFont" style="border-style: ridge">
   <div class="row text-center">
     <div class="col-12 mt-1">
       <app-header [title]="'Skills'"></app-header>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-12">
-    <div><i class="fab fa-angular iconAngular fa-4x"></i></div>
-    <div><i class="fab fa-node fa-4x" style="color: green;"></i></div>
+  <div class="row">
+    <div class="col-12">
+      <div class="bigFontSubHeader">Frontend</div>
+      <hr />
+    </div>
+    <div class="col col-lg-2">
+      <app-svg-html5></app-svg-html5>
+      <div class="pl-3">
+        HTML 5
+      </div>
+    </div>
+    <div class="col col-lg-2">
+      <app-svg-jsx></app-svg-jsx>
+      <div class="pl-4">
+        JSX
+      </div>
+    </div>
+    <div class="col col-lg-2">
+      <app-svg-bootstrap></app-svg-bootstrap>
+      <div class="pl-2">
+        Bootstrap 4
+      </div>
+    </div>
+    <div class="col col-lg-2"></div>
   </div>
 </div>
