--- a/src/app/content/about-me/about-me.component.css
+++ b/src/app/content/about-me/about-me.component.css
@@ -1,3 +1,8 @@
 .changeFont {
   font-family: "OpenSans-Regular", "arial", sans-serif;
 }
+
+.aboutMeBackground {
+  border-style: ridge;
+  background-color: rgba(255, 255, 255, 0.74);
+}
