Add more SVG icons

--- a/src/app/content/skills-page/skills-page.component.css
+++ b/src/app/content/skills-page/skills-page.component.css
@@ -10,3 +10,16 @@
 .bigFontSubHeader {
   font-size: xx-large;
 }
+
+.borderSkills {
+  border: 5px outset #1C6EA4;
+  background-color: rgba(255, 255, 255, 0.74);
+}
+
+hr {
+  border: none;
+  height: 1px;
+  /* Set the hr color */
+  color: #333; /* old IE */
+  background-color: #333; /* Modern Browsers */
+}
