--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -38,11 +38,11 @@
       </li>
       <ul class="sub-menu collapse" id="port">
         <li>
-          <a routerLink="#"><span class="fas fa-globe"></span> Works </a>
+          <a routerLink="#"><span class="fas fa-globe"></span> Projects </a>
         </li>
         <li>
           <a routerLink="#"
-            ><span class="fas fa-graduation-cap"></span> Academic works
+            ><span class="fas fa-graduation-cap"></span> Academic Projects
           </a>
         </li>
       </ul>
