Fix skills page columns for small screens

--- a/src/app/content/skills-page/skills-page.component.html
+++ b/src/app/content/skills-page/skills-page.component.html
@@ -9,11 +9,11 @@
       <div class="bigFontSubHeader">HTML</div>
       <hr />
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col col-lg-2 text-center">
       <app-svg-html5></app-svg-html5>
       <div>HTML5</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col col-lg-2 text-center">
       <app-svg-jsx></app-svg-jsx>
       <div>JSX</div>
     </div>
@@ -24,11 +24,11 @@
       <div class="bigFontSubHeader">CSS</div>
       <hr />
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-bootstrap></app-svg-bootstrap>
       <div>Bootstrap 4</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-css3></app-svg-css3>
       <div>CSS3</div>
     </div>
@@ -39,27 +39,27 @@
       <div class="bigFontSubHeader">Javascript</div>
       <hr />
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-angular></app-svg-angular>
       <div>Angular 2</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-react></app-svg-react>
       <div>ReactJS</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-jquery></app-svg-jquery>
       <div>jQuery</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-nodejs></app-svg-nodejs>
       <div>Node.js</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-type-script></app-svg-type-script>
       <div>TypeScript</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-js></app-svg-js>
       <div>JavaScript</div>
     </div>
@@ -70,19 +70,19 @@
       <div class="bigFontSubHeader">Back-End</div>
       <hr />
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-expressjs></app-svg-expressjs>
       <div class="mt-5">Express.js</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-mongodb></app-svg-mongodb>
       <div class="mt-5">MongoDB</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-mysql></app-svg-mysql>
       <div>SQL</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-restapi></app-svg-restapi>
       <div>RESTful API</div>
     </div>
@@ -93,27 +93,27 @@
       <div class="bigFontSubHeader">Cloud</div>
       <hr />
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-aws></app-svg-aws>
       <div class="mt-4">AWS</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-s3></app-svg-s3>
       <div>S3</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-ec2></app-svg-ec2>
       <div>EC2</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-route53></app-svg-route53>
       <div>Route53</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-cloudfront></app-svg-cloudfront>
       <div>CloudFront</div>
     </div>
-    <div class="col col-md-2 text-center">
+    <div class="col-6 col-lg-2 text-center">
       <app-svg-codepipline></app-svg-codepipline>
       <div>CodePipeline</div>
     </div>
