Add portfolio page

--- a/src/app/content/about-me/about-me.component.html
+++ b/src/app/content/about-me/about-me.component.html
@@ -4,20 +4,23 @@
       <app-header [title]="'About'"></app-header>
     </div>
   </div>
-  <div class="row font-weight-bold" style="font-size: x-large;">
-    <div class="col-12 ">
+  <div class="row font-weight-bold" style="font-size: x-large">
+    <div class="col-12">
       <i>My name is Alex and i'm a full stack developer.</i>
     </div>
     <div class="col-12">
       <i>A little about myself:</i>
     </div>
     <div class="col-12">
-      <i> technology and was very passion about it.</i>
+      <i>
+        from a very young age i have loved technology and was very passion about
+        it..</i
+      >
     </div>
     <div class="col-12">
       <i>
         I’m a mission-driven full stack developer with a passion for thoughtful
-        software design, collaboration, and teaching.</i
+        UI/UX design, collaboration, and teaching.</i
       >
     </div>
     <div class="col-12">
@@ -32,7 +35,7 @@
         problems.
       </i>
       <div class="col-12">
-        <i style="font-size: xx-large; color: red;">WIP</i>
+        <i style="font-size: xx-large; color: red">WIP</i>
       </div>
     </div>
   </div>
