--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,5 @@
 <div class="container"></div>
-<div class="row mt-1">
+<div class="row">
   <div class="col-12 mt-5">
     <router-outlet></router-outlet>
   </div>
