--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,4 +1,35 @@
 .bgColorHeader {
   background-color: #2574af;
-  color: white;
+  height: 9vh;
+}
+
+.text-js {
+  opacity: 0;
+}
+
+@keyframes flash {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.headline {
+  margin: 20px;
+  color: rgb(255, 255, 255);
+  font-size: 32px;
+  text-align: center;
+}
+
+h1 {
+  letter-spacing: 1.6px;
+  font-weight: 300;
+}
+
+@media (max-width: 767px) {
+  .headline {
+    margin: 0;
+  }
 }
