--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,5 @@
-<h1 class="bgColorHeader pt-4 pb-4">{{ this.title }}</h1>
+<div class="bgColorHeader mb-4">
+  <div class="type-js headline">
+    <h1 class="text-js">{{ this.title }}</h1>
+  </div>
+</div>
