--- a/src/app/shared/side-navbar/side-navbar.component.css
+++ b/src/app/shared/side-navbar/side-navbar.component.css
@@ -339,3 +339,16 @@ body {
   background-size: contain;
   width: 100%;
 }
+
+.sideBarMyLinkIconStyle {
+  color: white;
+}
+
+.sideBarMyLinkIconStyle:hover {
+  color: #d19b3d;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
+}
