Projects Page done

--- a/src/app/content/portfolio/projects-page/projects-page.component.html
+++ b/src/app/content/portfolio/projects-page/projects-page.component.html
@@ -4,4 +4,116 @@
       <app-header [title]="'Projects'"></app-header>
     </div>
   </div>
+  <div class="row justify-content-center">
+    <div class="col-5 text-center">
+      <h5>Miky zart webiste</h5>
+      <div class="row text-center">
+        <div class="col">
+          <a href="https://mikyzart.net/" target="_blank" title="Art shop"
+            ><img
+              class="imageSize"
+              src="https://i.ibb.co/ChD4RwC/mikywebsite2021.png"
+              alt="mikywebsite2021"
+          /></a>
+        </div>
+      </div>
+      <div class="borderProjectPage mt-2">
+        <div class="row text-left">
+          <div class="col">
+            <p>Front-end</p>
+            <hr />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-angular></app-svg-angular>
+            <div class="svgIconsText">Angular 11.1</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-bootstrap></app-svg-bootstrap>
+            <div class="svgIconsText">Bootstrap 4</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-html5></app-svg-html5>
+            <div class="svgIconsText">HTML5</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-css3></app-svg-css3>
+            <div class="svgIconsText">CSS3</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-type-script></app-svg-type-script>
+            <div class="svgIconsText">TypeScript</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="borderProjectPage mt-2">
+        <div class="row text-left">
+          <div class="col">
+            <p>Back-end</p>
+            <hr />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-expressjs></app-svg-expressjs>
+            <div class="svgIconsText">Express.js</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-js></app-svg-js>
+            <div class="svgIconsText">JavaScript</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-restapi></app-svg-restapi>
+            <div class="svgIconsText">RESTful API</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-nodejs></app-svg-nodejs>
+            <div class="svgIconsText">Node.js</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-mongodb></app-svg-mongodb>
+            <div class="svgIconsText mt-1">MongoDB</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="borderProjectPage mt-2">
+        <div class="row text-left">
+          <div class="col">
+            <p>Cloud</p>
+            <hr />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-aws></app-svg-aws>
+            <div class="svgIconsText">AWS</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-s3></app-svg-s3>
+            <div class="svgIconsText">S3</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-ec2></app-svg-ec2>
+            <div class="svgIconsText">EC2</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-route53></app-svg-route53>
+            <div class="svgIconsText">Route53</div>
+          </div>
+          <div class="col-sm-2 col-6 svgIcons">
+            <app-svg-cloudfront></app-svg-cloudfront>
+            <div class="svgIconsText">CloudFront</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-5 comingSoonBackground">
+      <div class="comingSoon">
+        <p>Coming soon...</p>
+      </div>
+    </div>
+  </div>
 </div>
