--- a/src/app/content/portfolio/academic-projects-page/academic-projects-page.component.html
+++ b/src/app/content/portfolio/academic-projects-page/academic-projects-page.component.html
@@ -4,4 +4,9 @@
       <app-header [title]="'Academic'"></app-header>
     </div>
   </div>
+  <div class="row justify-content-center">
+    <div class="col-5 text-center">
+
+    </div>
+  </div>
 </div>
