--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -59,17 +59,27 @@
       <li class="mb-2">
         <a routerLink="#"><i class="fas fa-at"></i> Contact</a>
       </li>
-      <a href="https://github.com/XSkylinex" target="_blank" title="GitHub"
-        ><i class="fab fa-github fa-2x sideBarMyLinkIconStyle pl-2"></i
-      ></a>
-      <a href="https://github.com/XSkylinex" target="_blank" title="LinkedIn"
-        ><i class="fab fa-linkedin fa-2x sideBarMyLinkIconStyle pl-2"></i
+      <a
+        href="https://github.com/XSkylinex"
+        target="_blank"
+        title="GitHub"
+        class="pl-2"
+        ><i class="fab fa-github fa-3x sideBarMyLinkIconStyle"></i
       ></a>
       <a
+        href="https://github.com/XSkylinex"
+        target="_blank"
+        title="LinkedIn"
+        class="pl-2"
+      >
+        <i class="fab fa-linkedin fa-3x linkedInColor"></i>
+      </a>
+      <a
         href="https://www.facebook.com/alex.moshinsky/"
+        class="pl-2"
         target="_blank"
         title="Facebook"
-        ><i class="fab fa-facebook-square fa-2x sideBarMyLinkIconStyle pl-2"></i
+        ><i class="fab fa-facebook-square fa-3x facebookColor"></i
       ></a>
     </ul>
   </div>
