--- a/src/app/content/portfolio/academic-projects-page/academic-projects-page.component.html
+++ b/src/app/content/portfolio/academic-projects-page/academic-projects-page.component.html
@@ -4,9 +4,169 @@
       <app-header [title]="'Academic'"></app-header>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="col-5 text-center">
+  <div class="row justify-content-center changeFont">
+    <div class="col-5 text-center mr-4 acBackground border border-black">
+      <h4>Project 1: Java 8</h4>
+      <div class="row">
+        <div class="text-left">
+          <div class="ml-1">
+            An annual Advanced Software Programming project: a pipe game,
+            setting up a server and a client in Java and Java FX respectively,
+          </div>
+          <div class="ml-1">
+            as well as implementing and using the following search algorithms:
+            BFS, DFS and HillClimbing.
+          </div>
+          <div class="ml-1">Links to Project</div>
+          <div class="borderProjectPage">
+            <div class="row text-left">
+              <div class="col ml-1">Front-end</div>
+            </div>
+            <hr />
+            <div class="row justify-content-center text-center">
+              <div class="col-6 col-md-5">
+                <a class="gitHubColor"
+                  href="https://github.com/XSkylinex/PipeGameClient"
+                  target="_blank"
+                  title="Pipegame client side"
+                  ><i class="fab fa-github fa-2x "></i>
+                  <div class="text-center">Front-end</div></a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="borderProjectPage mt-2">
+            <div class="row text-left">
+              <div class="col ml-1">Back-end</div>
+            </div>
+            <hr />
+            <div class="row justify-content-center text-center">
+              <div class="col-6 col-md-5">
+                <a class="gitHubColor"
+                  href="https://github.com/XSkylinex/javaProject"
+                  target="_blank"
+                  title="Pipegame server side"
+                  ><i class="fab fa-github fa-2x"></i>
+                  <div class="text-center">Back-end</div></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-5 text-center acBackground border border-black">
+      <h4>Project 2: ASP.net</h4>
+      <div class="row">
+        <div class="text-left">
+          <p class="mb-5 ml-1">
+            asp.net core MVC 2.1, a “social calendar” which implements machine
+            learning and design and uses several databases.
+          </p>
+          <div class="ml-1">Link to Project</div>
+          <div class="borderProjectPage">
+            <div class="row text-left">
+              <div class="col ml-1">Social calendar</div>
+            </div>
+            <hr />
+            <div class="row justify-content-center text-center">
+              <div class="col-6 col-md-5">
+                <a class="gitHubColor"
+                  href="https://github.com/XSkylinex/EventsUs"
+                  target="_blank"
+                  title="EventsUs Project"
+                  ><i class="fab fa-github fa-2x"></i>
+                  <div class="text-center">EventsUs</div></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="row justify-content-center changeFont mt-2 ml-2 mb-5">
+    <div class="col-5 text-center mr-4 acBackground border border-black">
+      <h4>Project 3: MEAN Stack</h4>
+      <div class="row">
+        <div class="text-left">
+          <p class="ml-1">
+            A project in Web Applications: my partner and I made a Mean Stack
+            based social network, that supports uploading pictures and a ‘like’
+            system.
+          </p>
+          <div class="ml-1">Link to Project</div>
+          <div class="borderProjectPage">
+            <div class="row text-left">
+              <div class="col ml-1">To MEAN stack</div>
+            </div>
+            <hr />
+            <div class="row justify-content-center text-center">
+              <div class="col-6 col-md-5">
+                <a class="gitHubColor"
+                  href="https://github.com/XSkylinex/AngularProject"
+                  target="_blank"
+                  title="Angular project"
+                  ><i class="fab fa-github fa-2x"></i>
+                  <div class="text-center">Faceblog</div></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-5 text-center mr-4 acBackground border border-black">
+      <h4>Project 4: Final project</h4>
+      <div class="row">
+        <div class="text-left">
+          <div class="ml-1">
+            Monitoring program that finds forgotten Virtual Machine a
+          </div>
+          <div class="ml-1">
+            kernel-based virtual machine (kvm)environment and checks their
+            behavior.
+          </div>
+          <div class="ml-1">written in Python3.8</div>
+          <div class="ml-1">Link to Project</div>
+          <div class="borderProjectPage">
+            <div class="row text-left">
+              <div class="col ml-1">HERO vs. Zombie</div>
+            </div>
+            <hr />
+            <div class="row justify-content-center text-center">
+              <div class="col-6 col-md-5">
+                <a class="gitHubColor"
+                  href="https://github.com/XSkylinex/AngularProject"
+                  target="_blank"
+                  title="Final project"
+                  ><i class="fab fa-github fa-2x"></i>
+                  <div class="text-center">HERO</div></a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="ml-1 mt-2">Link to Article</div>
+          <div class="borderProjectPage">
+            <div class="row text-left">
+              <div class="col ml-1">HERO vs. Zombie</div>
+            </div>
+            <hr />
+            <div class="row justify-content-center text-center">
+              <div class="col-6 col-md-5">
+                <a class="gitHubColor"
+                  href="https://www.researchgate.net/publication/346988284_HERO_vs_Zombie_Identifying_Zombie_Guests_in_a_Virtual_Machine_Environment"
+                  target="_blank"
+                  title="Final project Article"
+                  ><i class="fas fa-newspaper fa-2x"></i>
+                  <div class="text-center">HERO Article</div></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
