Resume page work

--- a/src/app/content/portfolio/projects-page/projects-page.component.html
+++ b/src/app/content/portfolio/projects-page/projects-page.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container changeFont">
   <div class="row">
     <div class="text-center col-12">
       <app-header [title]="'Projects'"></app-header>
@@ -7,6 +7,12 @@
   <div class="row justify-content-center">
     <div class="col-5 text-center">
       <h5>Miky zart webiste</h5>
+      <div class="comingSoonBackground">
+        I developed for my artist friend, Miky Zar. I took this project on, while
+        recognizing the need to move his business online due of COVID-19’s new
+        reality forced on us all. I'm very proud of the final outcome delivered
+        for the client.
+      </div>
       <div class="row text-center">
         <div class="col">
           <a href="https://mikyzart.net/" target="_blank" title="Art shop"
