--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -47,11 +47,11 @@
         </li>
       </ul>
 
-      <li>
-        <a routerLink="#"><i class="fa fa-clipboard-list"></i> Resume</a>
+      <li routerLink="/resume" class="disableBorderWhenActive">
+        <a><i class="fa fa-clipboard-list"></i> Resume</a>
       </li>
-      <li>
-        <a routerLink="#"><i class="fa fa-university"></i> Education </a>
+      <li routerLink="/education" class="disableBorderWhenActive">
+        <a><i class="fa fa-university"></i> Education </a>
       </li>
       <li>
         <a routerLink="#"><i class="fa fa-scroll"></i> Publications</a>
