--- a/src/app/content/portfolio/projects-page/projects-page.component.css
+++ b/src/app/content/portfolio/projects-page/projects-page.component.css
@@ -38,3 +38,7 @@ h5 {
   background-color: rgba(255, 255, 255, 0.829);
 
 }
+
+.changeFont {
+  font-family: "OpenSans-Regular", "arial", sans-serif;
+}
