--- a/src/app/content/education-page/education-page.component.html
+++ b/src/app/content/education-page/education-page.component.html
@@ -1,1 +1,56 @@
-<p>education-page works!</p>
+<div class="container">
+  <div class="row">
+    <div class="text-center col-12">
+      <app-header [title]="'Education'"></app-header>
+    </div>
+  </div>
+  <div style="background-color: rgba(255, 255, 255, 0.74)">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card-body">
+          <div id="content">
+            <ul class="timeline">
+              <li class="event" data-date="2020 - 2017">
+                <h3>Computer Science</h3>
+                <div>Graduate of computer science B.Sc.</div>
+                <div>
+                  from college of management academic studies in Rishon LeZion,
+                  Isreal.
+                </div>
+              </li>
+              <li class="event" data-date="2015 - 2015">
+                <h3>Quality Assurance</h3>
+                <p>John Bryce College (Graduate), 470 academic hours</p>
+                <div>
+                  <div>
+                    During the course I've experienced – Testing Methodologies
+                  </div>
+                  <div>
+                    (ISTQB). Reading and writing test documents (STD, STP, STR)-
+                  </div>
+                  <div>
+                    according to IEEE829 standard. Writing Test Plans, Cases &
+                  </div>
+                  <div>
+                    Processes. Testing Tools- VSTS (MTM 2012), Quality Center,
+                    QTP
+                  </div>
+                  <div>
+                    Operating Systems- Windows, Unix, Linux , OSX Languages-
+                    Java,
+                  </div>
+                  <div>Css, HTML. Database- SQL</div>
+                </div>
+              </li>
+              <li class="event" data-date="2008 - 2005">
+                <h3>High School</h3>
+                <p>Computer studies in Yohanna Jabotinsky.</p>
+                <p>I studied Prolog and Pascal programing languages</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
