--- a/src/app/content/resume-page/resume-page.component.html
+++ b/src/app/content/resume-page/resume-page.component.html
@@ -15,7 +15,7 @@
                 <p></p>
               </li>
               <li class="event" data-date="2021 - 2020">
-                <h3>web developer</h3>
+                <h3>Web Developer</h3>
                 <p>Freelance web developer</p>
               </li>
               <li class="event" data-date="2021 - 2020">
