--- a/src/app/shared/side-navbar/side-navbar.component.html
+++ b/src/app/shared/side-navbar/side-navbar.component.html
@@ -53,11 +53,11 @@
       <li routerLink="/education" class="disableBorderWhenActive">
         <a><i class="fa fa-university"></i> Education </a>
       </li>
-      <li>
-        <a routerLink="#"><i class="fa fa-scroll"></i> Publications</a>
+      <li routerLink="/pub" class="disableBorderWhenActive">
+        <a><i class="fa fa-scroll"></i> Publications</a>
       </li>
-      <li class="mb-2">
-        <a routerLink="#"><i class="fas fa-at"></i> Contact</a>
+      <li class="mb-2" routerLink="/contact" class="disableBorderWhenActive">
+        <a><i class="fas fa-at"></i> Contact</a>
       </li>
       <a
         href="https://github.com/XSkylinex"
