Publications page work

--- a/src/app/content/publications-page/publications-page.component.html
+++ b/src/app/content/publications-page/publications-page.component.html
@@ -1,1 +1,29 @@
-<p>publications-page works!</p>
+<div class="container">
+  <div class="row">
+    <div class="text-center col-12">
+      <app-header [title]="'Publications'"></app-header>
+    </div>
+  </div>
+
+  <div class="row borderSkills p-1">
+    <div class="col-12">
+      <div class="bigFontSubHeader">
+        My teammates and I, led by Dr. Netzer Zaidenberg, presented an article
+        we wrote at the 2021 Modelsward International Conference. The article,
+        written about the final project for our undergraduate degree, is about
+        locating virtual machines in "zombie" mode in the kvm environment.
+      </div>
+      <hr />
+    </div>
+    <div class="col-12 text-center">
+      <iframe
+        width="100%"
+        height="600"
+        src="https://www.docdroid.net/Fk4t7RC/herovszombie-pdf"
+        frameborder="0"
+        allowtransparency
+        allowfullscreen
+      ></iframe>
+    </div>
+  </div>
+</div>
