--- a/src/app/content/contact-page/contact-page.component.html
+++ b/src/app/content/contact-page/contact-page.component.html
@@ -1,1 +1,7 @@
-<p>contact-page works!</p>
+<div class="container">
+  <div class="row">
+    <div class="text-center col-12">
+      <app-header [title]="'Contact'"></app-header>
+    </div>
+  </div>
+</div>
