--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,7 @@
-<div class="bgColorHeader mb-4">
-  <div class="type-js headline">
-    <h1 class="text-js">{{ this.title }}</h1>
+<div class="container">
+  <div class="mb-4 row  justify-content-center">
+  <div class="type-js headline bgColorHeader col-12">
+      <div class="text-js titleName">{{ this.title }}</div>
+    </div>
   </div>
 </div>
